# Maniskill-Imitation-Learning-Lab

./: .gitignore  README.md  pyproject.toml
scripts/: analyze_demo_phases.py  download_demos.py  eval_gripper_ablation.py  evaluate_checkpoint_offline.py  evaluate_nearest_neighbor.py  evaluate_policy.py  inspect_demo.py  log_policy_divergence.py  prepare_state_demos.py  train_bc.py
src/il_lab/: __init__.py  data.py  env_utils.py  model.py
