[project]
name = "maniskill-imitation-learning-lab"
version = "0.1.0"
description = "Simple Behavior Cloning lab for ManiSkill PushCube-v1."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29",
    "h5py>=3.10",
    "mani_skill>=3.0.0",
    "numpy>=1.24",
    "torch>=2.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/il_lab"]
